# kumassy-rotator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rotate.yml
animation/: main.py
src/: main.rs
